minor changes on main CSS
main css, added border left of editable fields

--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
                     <h3 id="bio_wins_losses">Player win to loss ratio</h3>
                 </li>
                 <li>
-                    <h3 id="bio_info">Player info</h3>
+                    <h3 id="bio_info" class="editbl">Player info</h3>
                 </li>
             </ul>
         </div>
@@ -69,7 +69,7 @@
             <div class="clear"></div>
             <h1 id="misc_h1">Country</h1>
             <div class="clear"></div>
-            <p class="misc_p" id="misc_birth">Bord in Spain in 1986</p>
+            <p class="misc_p editbl" id="misc_birth">Bord in Spain in 1986</p>
             <div id="ms1" class="misc_seperator"></div>
         </section>
 
@@ -78,7 +78,7 @@
             <div class="clear"></div>
             <h1 id="misc_h1">Career start</h1>
             <div class="clear"></div>
-            <p class="misc_p" id="misc_fact">Fact about career</p>
+            <p class="misc_p editbl" id="misc_fact">Fact about career</p>
             <div id="ms2" class="misc_seperator"></div>
         </section>
 
@@ -87,7 +87,7 @@
             <div class="clear"></div>
             <h1 id="misc_h1">First title</h1>
             <div class="clear"></div>
-            <p class="misc_p" id="misc_title">Fact about first title</p>
+            <p class="misc_p editbl" id="misc_title">Fact about first title</p>
             <div id="ms3" class="misc_seperator"></div>
         </section>
 
