--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="manifest" href="manifest.json">
+
     <link href="index.css" rel="stylesheet">
 
 </head>
