--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="manifest" href="manifest.webmanifest">
     <link href="main.css" rel="stylesheet">
     <link href="tbsort.css" rel="stylesheet">
 
