--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="manifest" href="manifest.webmanifest">
     <script src="src/common.js" defer></script>
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favico.png">
 
     <link href="index.css" rel="stylesheet">
 
