--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="manifest" href="manifest.webmanifest">
-    <script src="src/common.js" defer></script>
+    <script src="common.js" defer></script>
     <link rel="shortcut icon" href="/favico.png">
 
     <link href="index.css" rel="stylesheet">
