--- a/addplayer.html
+++ b/addplayer.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MSC Askisi 1</title>
+    <title>UoM_MSC_tennisApp Add</title>
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@
 
     <main id="main_cont">
         <div class="container">
-            <form action="/action_page.php">
+            <form>
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Player's first name..">
 
