--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MSC Askisi 1</title>
+    <title>UoM_MSC_tennisApp Player</title>
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
