--- a/addplayer.html
+++ b/addplayer.html
@@ -73,12 +73,16 @@
 
     <!-- Firebaseeeeeeeeeeeeeeeeeeeee -->
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-database.js"></script>
+    <!-- 
+        
+        <script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.4/firebase-database.js"></script>
+    
+    -->
+    <script src="./src/firebase-app.js"></script>
+    <script src="./src/firebase-analytics.js"></script>
+    <script src="./src/firebase-database.js"></script>
 
     <script>
         // Your web app's Firebase configuration
